--- a/rock-game.html
+++ b/rock-game.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="rock-game.css">
     <title>Document</title>
-    <script type="text/javascript" src="rock-game.js"></script>
+    <script type="text/javascript" src="rock-game.js" defer></script>
 </head>
 <body>
-    
+<h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
+
+<div id="play">
+<h2 class="comment">Make a selection!</h2>
+</div>
+<div id="container">
+  <div id="one">
+ 
+    <button id="rock">Rock</button>
+
+    </div>
+ 
+    <div id="two">
+    <button id="paper">Paper</button>
+ 
+    </div>
+
+    <div id="three">
+    <button id="scissors">Scissors</button>
+ 
+</div>
+</div>
+
+<div id="score">
+<h2>Player Score</h2>
+<h3 class ='player-score'>0</h3>
+<h2>Computer Score</h2>
+<h3 class='comp-score'>0</h3>
+<div class="reset">
+<button id="reset">Reset</button>
+</div>
+</div>
+
+
 </body>
 </html>
