--- a/rock-game.html
+++ b/rock-game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="rock-game.css">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors</title>
     <script type="text/javascript" src="rock-game.js" defer></script>
 </head>
 <body>
