add first to five text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
 
 <div id="play">
-<h2 class="comment">Make a selection!</h2>
+<h2 class="comment">Make a selection! The first to five wins!</h2>
 </div>
 <div id="container">
   <div id="one">
