add more header text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
 
 <div id="play">
-<h2 class="comment">Make a selection! The first to five wins!</h2>
+<h2 class="comment">Make a selection! 
+  <br>
+  The first to win 5 points wins!</h2>
 </div>
 <div id="container">
   <div id="one">
