--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script type="text/javascript" src="rock-game.js" defer></script>
 </head>
 <body>
+
 <h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
 
 <div id="play">
-<h2 class="comment">Make a selection! 
-  <br>
-  The first to win 5 points wins!</h2>
+<h2 class="comment"><span class="head">Make a selection!</span></h2>
+  <h2 class="comment"><span class="head">The first to win 5 points wins!</span></h2>
 </div>
 <div id="container">
   <div id="one">
@@ -35,14 +35,15 @@
 </div>
 
 <div id="score">
-<h2>Player Score</h2>
+<h2><span class="lower">Player Score</span></h2>
 <h3 class ='player-score'>0</h3>
-<h2>Computer Score</h2>
+<h2><span class="lower">Computer Score</span></h2>
 <h3 class='comp-score'>0</h3>
 <div class="reset">
 <button id="reset">Reset</button>
 </div>
 </div>
+
 
 
 </body>
