change scissors image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
+<h1 class="title"><span class="head">Let's Play Rock, Paper, Scissors!</span></h1>
 
 <div id="play">
 <h2 class="comment"><span class="head">Make a selection!</span></h2>
