--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 <div id="score">
 <h2><span class="lower">Player Score</span></h2>
-<h3 class ='player-score'>0</h3>
+<h3 class ='player-score'><span class="numbers">0</span></h3>
 <h2><span class="lower">Computer Score</span></h2>
-<h3 class='comp-score'>0</h3>
+<h3 class='comp-score'><span class="numbers">0</span></h3>
 <div class="reset">
 <button id="reset">Reset</button>
 </div>
